tests/NormalTests/paczka1/fuzzy1/36070611.err
Error in line 2: IUrQ5dNI S611 23,7
Error in line 3: IUrQ5dNI A878 13,0
Error in line 11: JDwy7cZeC1e A878 76,9
